name:       SHA
category:   Cryptography, Codec
version:    2
license:    BSD3
license-file: LICENSE
author:     Adam Wick <awick@galois.com>, Brian Lewis <brian@lorf.org>
maintainer: Adam Wick <awick@galois.com>,
            Raphael Javaux <raphaeljavaux@gmail.com>
stability:  stable
build-type: Simple
cabal-version: >= 1.8
tested-with: GHC == 7.6.1
synopsis: Implementations of the SHA suite of message digest functions
description: This library implements the SHA suite of message digest functions,
             according to NIST FIPS 180-2 (with the SHA-224 addendum), as well
             as the SHA-based HMAC routines. The functions have been tested 
             against most of the NIST and RFC test vectors for the various
             functions. While some attention has been paid to performance, 
             these do not presently reach the speed of well-tuned libraries, 
             like OpenSSL.

Flag exe
  Description: Build SHA executables along with the library.
  Default: False

Library
  hs-source-dirs:  src
  ghc-options:     -Wall
  build-depends:   array      >= 0.5  && < 0.7,
                   base       >= 4.0  && < 6.0,
                   binary     >= 0.7  && < 0.9,
                   bytestring >= 0.10 && < 0.12
  exposed-modules: 
                   Data.Digest.Pure.SHA,
                   Data.Digest.Pure.SHA1,
                   Data.Digest.Pure.SHA256,
                   Data.Digest.Pure.SHA512,
                   Data.Digest.Pure.SHA.HMAC
  other-modules:   Data.Digest.Pure.SHA.Internal,
                   Data.Digest.Pure.SHA.Padding

Executable sha1
  hs-source-dirs:  src-bin
  if !flag(exe)
    buildable: False
  if flag(exe)
    build-depends: base >= 4 && < 6,
                   bytestring > 0.8 && < 10000,
                   directory > 0.0 && < 10000,
                   pretty-hex >= 1.0 && < 1.2,
                   SHA >= 2 && < 3
  Main-Is: Main.hs
  extensions: CPP
  cpp-options: -DALGORITHM=sha1
  ghc-options: -Wall

Executable sha224
  hs-source-dirs:  src-bin
  if !flag(exe)
    buildable: False
  if flag(exe)
    build-depends: base >= 4 && < 6,
                   bytestring > 0.8 && < 10000,
                   directory > 0.0 && < 10000,
                   pretty-hex >= 1.0 && < 1.2,
                   SHA >= 2 && < 3
  Main-Is: Main.hs
  extensions: CPP
  cpp-options: -DALGORITHM=sha224
  ghc-options: -Wall

Executable sha256
  hs-source-dirs:  src-bin
  if !flag(exe)
    buildable: False
  if flag(exe)
    build-depends: base >= 4 && < 6,
                   bytestring > 0.8 && < 10000,
                   directory > 0.0 && < 10000,
                   pretty-hex >= 1.0 && < 1.2,
                   SHA >= 2 && < 3
  Main-Is: Main.hs
  extensions: CPP
  cpp-options: -DALGORITHM=sha256
  ghc-options: -Wall

Executable sha384
  hs-source-dirs:  src-bin
  if !flag(exe)
    buildable: False
  if flag(exe)
    build-depends: base >= 4 && < 6,
                   bytestring > 0.8 && < 10000,
                   directory > 0.0 && < 10000,
                   pretty-hex >= 1.0 && < 1.2,
                   SHA >= 2 && < 3
  Main-Is: Main.hs
  extensions: CPP
  cpp-options: -DALGORITHM=sha384
  ghc-options: -Wall

Executable sha512
  hs-source-dirs:  src-bin
  if !flag(exe)
    buildable: False
  if flag(exe)
    build-depends: base >= 4 && < 6,
                   bytestring > 0.8 && < 10000,
                   directory > 0.0 && < 10000,
                   pretty-hex >= 1.0 && < 1.2,
                   SHA >= 2 && < 333
  Main-Is: Main.hs
  extensions: CPP
  cpp-options: -DALGORITHM=sha512
  ghc-options: -Wall

test-suite test-sha
  type:            exitcode-stdio-1.0
  hs-source-dirs:  src
  main-is:         Test.hs
  ghc-options:     -Wall -fhpc
  build-depends:   array                      >= 0.5     && < 0.7,
                   base                       >= 4.0     && < 6.0,
                   binary                     >= 0.7     && < 0.9,
                   bytestring                 >= 0.10    && < 0.12,
                   HUnit                      >= 1.2     && < 1.4,
                   QuickCheck                 >= 2.7     && < 2.9,
                   test-framework             >= 0.8.0.3 && < 0.10,
                   test-framework-hunit       >= 0.3     && < 0.5,
                   test-framework-quickcheck2 >= 0.3.0.2 && < 0.5

source-repository head
  type:     git
  location: git://github.com/GaloisInc/SHA.git
